FP-3831 beholde merknadparametere ved aksjonspunktoppdatering